--- a/src/main/Resources/Templates/donation.html
+++ b/src/main/Resources/Templates/donation.html
@@ -65,12 +65,13 @@
                     <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>ReLeaf@ReLeaf.com</a>
                     <a href="#"><i class="fa fa-phone" aria-hidden="true"></i>555-123-4567</a>
                 </div>
+                <!--&lt;!&ndash; column End &ndash;&gt;-->
                 <div class="col-sm-5 col-xs-12 text-right header-top-right">
                     <a href="https://www.facebook.com/reliefweb"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     <a href="https://twitter.com/reliefweb"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                     <a href="https://www.linkedin.com/company/reliefweb"><i class="fa fa-skype" aria-hidden="true"></i></a>
                     <a href="https://www.youtube.com/channel/UC4RQutFVU_1OSNtOzGyBfGw"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                    <a href="donation.html" class="common_btn hvr-sweep-to-bottom">DONATE NOW</a>
+
                 </div>
                 <!-- column End -->
             </div>
@@ -84,42 +85,22 @@
             <div class="row">
                 <div class="col-sm-2 col-xs-6">
                     <div class="romana_logo">
-                        <a href="index-2.html"><img th:src="@{../images/logo.png}" alt=""></a>
+                        <a th:href="@{/}"><img th:src="@{../images/logo.png}" alt=""></a>
                     </div>
                 </div>
                 <!-- column End -->
                 <div class="col-sm-10">
                     <nav>
                         <ul class="main_menu">
-                            <li><a href="index-2.html">Home</a></li>
-                            <li><a href="#">causes</a>
-                                <ul class="sub_menu">
-                                    <li><a href="causes.html">cause page</a></li>
-                                    <li><a href="causes-detail.html">cause detail</a></li>
-                                </ul>
+                            <li><a th:href="@{/}">Home</a></li>
+
+                            <li><a th:href="@{/volunteer}">Volunteer</a>
+
                             </li>
-                            <li><a href="#">pages</a>
-                                <ul class="sub_menu">
-                                    <li><a href="about.html">about page</a></li>
-                                    <li><a href="volunteer.html">volunteer page</a></li>
-                                    <li><a href="donation.html">donation page</a></li>
-                                    <li><a href="testimonial.html">testimonial</a></li>
-                                    <li><a href="404.html">404 page</a></li>
-                                </ul>
+                            <li><a href="https://reliefweb.int/blog">blog</a>
+
                             </li>
-                            <li><a href="#">blog</a>
-                                <ul class="sub_menu">
-                                    <li><a href="blog.html">blog page</a></li>
-                                    <li><a href="disasterdetails.html">blog detail</a></li>
-                                </ul>
-                            </li>
-                            <li class="search_expand"><a href="#"><i class="fa fa-search"></i></a>
-                                <div class="search">
-                                    <form action="#">
-                                        <input id="search" name="search" type="text" placeholder="Search...">
-                                    </form>
-                                </div>
-                            </li>
+
                         </ul>
                     </nav>
                     <!-- nav End -->
@@ -211,79 +192,40 @@
 <!-- ==================================================
 *Footer_area start
 =================================================== -->
-    <footer class="romana_footer_area">
-        <div class="romana_footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="footer_widget footer_widget_text">
-                            <a href="index-2.html"><img src="../static/images/footer_logo.png" alt="logo"></a>
-                            <p>Duis autem vel eum iriure dolor in hendrerit int dolore eueuat nulla faces at vero eros eneie.</p>
-                            <a href="#"><span><i class="fa fa-map-marker" aria-hidden="true"></i></span>Grant Ave. Central New Road, 8360</a>
-                            <a href="mailto:gardenhouse@gmail.com"> <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span>gardenhouse@gmail.com</a>
-                            <a href="tel:+88075975854"><span><i class="fa fa-phone" aria-hidden="true"></i></span>+88 075 975 854</a>
-                        </div>
+<footer class="romana_footer_area romana_section_padding">
+    <div class="romana_footer_top">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="footer_widget footer_widget_text">
+                        <a href="index-2.html"><img th:src="@{../images/logo-reversed.png}" alt="logo"></a>
+                        <p>Replanting hope, around the world and in your neighborhood.</p>
+                        <a href="https://www.google.com/maps/place/Detroit+Labs/@42.3353386,-83.0493608,15z/data=!4m5!3m4!1s0x0:0xc187c33ee716e9d3!8m2!3d42.3353386!4d-83.0493608"><span><i
+                                class="fa fa-map-marker" aria-hidden="true"></i></span>1520 Woodward Ave
+                            #600, Detroit, MI 48226</a>
+                        <a href="mailto:ReLeaf@ReLeaf.com"> <span><i class="fa fa-envelope-o"
+                                                                     aria-hidden="true"></i></span>ReLeaf@ReLeaf.com</a>
+                        <a href="tel:555-123-4567"><span><i class="fa fa-phone"
+                                                            aria-hidden="true"></i></span>555-123-4567</a>
                     </div>
-                    <!-- column End -->
-                    <div class="col-sm-3">
-                        <div class="footer_widget footer_widget_il">
-                            <h2>Inportant Links</h2>
-                            <ul>
-                                <li><a href="#">Support Forums</a></li>
-                                <li><a href="#">Product Support</a></li>
-                                <li><a href="#">Knowladge Base</a></li>
-                                <li><a href="#">Terms & Condation</a></li>
-                                <li><a href="#">Requist a Quote</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- column End -->
-                    <div class="col-sm-2">
-                        <div class="footer_widget footer_widget_sl">
-                            <h2>Social Links</h2>
-                            <ul>
-                                <li><a href="#">facebook</a></li>
-                                <li><a href="#">Google+</a></li>
-                                <li><a href="#">Dribbble</a></li>
-                                <li><a href="#">Behance</a></li>
-                                <li><a href="#">Themeforest</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- column End -->
-                    <div class="col-sm-3">
-                        <div class="footer_widget footer_widget_gl">
-                            <a href="gallery.html"><h2>our gallery</h2></a>
-                            <a href="gallery.html"><img src="../static/images/home_gallery.png" alt=""></a>
-                        </div>
-                    </div>
-                    <!-- column End -->
                 </div>
+                <!-- column End -->
+                <div class="col-sm-3 col-sm-offset-5">
+                    <div class="footer_widget footer_widget_il">
+                        <h2>Social Links</h2>
+                        <ul>
+                            <li><a href="https://www.facebook.com/reliefweb">Facebook</a></li>
+                            <li><a href="https://twitter.com/reliefweb">Twitter</a></li>
+                            <li><a href="https://www.linkedin.com/authwall?trk=gf&trkInfo=AQE4oBUsCa_MhgAAAWnaK1X4IgE6IyIX3XoPUh8p0UJEDGtMFYe4Ib7p4IcMWjI8Y_ejlQEU9JXAXKwy_o5McHD_tl-yzpzO5AFz2DHUkHWjUanDl_8qAtbc5oCD9MqhEF4nB20=&originalReferer=http://localhost:8080/#&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Freliefweb">LinkedIn</a></li>
+                            <li><a href="https://www.youtube.com/channel/UC4RQutFVU_1OSNtOzGyBfGw">YouTube</a></li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
-        <!-- footer_top End -->
-        <div class="romana_footer_bottom">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div class="romana_footer_bottom_text">
-                            <p>Copyrigth <span>&copy;</span> 2017, All Right Reserved</p>
-                        </div>
-                    </div>
-                    <!-- column End -->
-                    <div class="col-sm-6">
-                        <div class="romana_footer_bottom_text text-right">
-                            <p>Designed by: <a href="#">Crazycafe</a></p>
-                        </div>
-                    </div>
-                    <!-- column End -->
-                </div>
-                <!-- row End -->
-            </div>
-            <!-- container End -->
-        </div>
-        <!-- footer_bottom End -->
-    </footer>
+    </div>
+</footer>
 <!-- ======================================================
     ***Js Files***
 =========================================================== -->
