--- a/src/main/Resources/static/css/style.css
+++ b/src/main/Resources/static/css/style.css
@@ -140,7 +140,7 @@ h3 {
 .common_btn {
   background: #19b968;
   display: inline-block;
-  width: 170px;
+  width: 190px;
   height: 52px;
   text-align: center;
   line-height: 52px;
@@ -544,6 +544,10 @@ body {
         .header-top-left a i {
           margin-right: 7px; } }
 
+.header-top-right{
+    padding: 8px 15px;
+}
+
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .header-top-right {
     margin-bottom: 30px;
@@ -571,7 +575,7 @@ body {
   z-index: 999; }
 
 .romana_logo {
-  margin-top: 25px; }
+  margin-top: 0px; }
   @media only screen and (min-width: 0px) and (max-width: 767px) {
     .romana_logo {
       margin-bottom: 15px;
@@ -1396,8 +1400,8 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   position: relative;
-  padding-bottom: 100px;
-  padding-top: 118px; }
+  padding-bottom: 20px;
+  padding-top: 20px; }
   .romana_footer_area .romana_footer_top:after {
     background: rgba(34, 34, 34, 0.98); }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1409,7 +1413,7 @@ body {
       padding-top: 30px;
       padding-bottom: 50px; } }
 .romana_footer_area .footer_widget_text {
-  padding-right: 40px; }
+  padding-right: 20px; }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .romana_footer_area .footer_widget_text {
       padding-right: 0px; } }
@@ -1466,7 +1470,8 @@ body {
     font-weight: 500;
     font-size: 20px;
     font-weight: 500;
-    margin-bottom: 40px; }
+    margin-bottom: 10px;
+      margin-top: 30px;}
     @media only screen and (min-width: 768px) and (max-width: 991px) {
       .romana_footer_area .footer_widget h2 {
         font-size: 16px; } }
@@ -2238,7 +2243,7 @@ body {
     width: 10000px;
     z-index: -1; }
   .romana_donate_bg_area:before {
-    /*background-image: url("../images/sprout-donate.png");*/
+    background-image: url("../images/sprout-donate.png");
     background-repeat: no-repeat;
     bottom: -40px;
     left: 50%;
