adding styling to volunteer page. Returning recent volunteers

--- a/src/main/Resources/Templates/confirmation.html
+++ b/src/main/Resources/Templates/confirmation.html
@@ -12,7 +12,7 @@
         ***Favicon***
     ================================================================= -->
 
-    <link rel="shortcut icon" type="image/png" th:href="@{..//images/fevicon.png}">
+    <link rel="shortcut icon" type="image/png" th:href="@{../images/fevicon.png}">
 
     <!-- ================================================================
         ***CSS File***
