--- a/src/main/Resources/Templates/disasterdetails.html
+++ b/src/main/Resources/Templates/disasterdetails.html
@@ -12,7 +12,7 @@
         ***Favicon***
     ================================================================= -->
 
-    <link rel="shortcut icon" type="image/png" th:href="@{..//images/fevicon.png}">
+    <link rel="shortcut icon" type="image/png" th:href="@{../images/fevicon.png}">
 
     <!-- ================================================================
         ***CSS File***
@@ -209,20 +209,19 @@
 <!-- ==========================================================
 *romana_cta_area start
 ============================================================ -->
-<div class="romana_cta_area">
+<div class="romana_cta_area mt66">
     <div class="container">
         <div class="row ">
             <div class="col-md-8 col-md-offset-1 col-sm-9">
-                <h2>Lest make the world better togethers.</h2>
+                <h2>Lets make the world better together.</h2>
             </div>
             <!-- column End -->
             <div class="col-sm-3">
-                <a href="volunteer.html" class="hvr-box-shadow-outset common_btn">join with us<i
+                <a th:href="@{/volunteer}" class="hvr-box-shadow-outset common_btn">Become A Volunteer<i
                         class="fa fa-long-arrow-right"></i></a>
             </div>
             <!-- column End -->
         </div>
-        <!-- row End -->
     </div>
 </div>
 <!-- ==================================================
